# identified_vec

./: Cargo.toml  LICENSE  README.md
identified_vec/: Cargo.toml
identified_vec/src/: errors.rs  identified_vec_into_iterator.rs  identified_vec_iterator.rs  is_identifiable_vec.rs  is_identifiable_vec_of.rs  is_identified_vec_via.rs  lib.rs  serde_error.rs  vec.rs  vec_of.rs
identified_vec_macros/: Cargo.toml
identified_vec_macros/src/: lib.rs
src/: identifiable.rs  identified_vec.rs  identified_vec_of.rs  is_identified_vec_via.rs  lib.rs  newtype_identified_vec.rs  primitives_identifiable.rs  serde_error.rs  vec.rs  vec_of.rs
src/iterators/: identified_vec_into_iterator.rs  identified_vec_iterator.rs  mod.rs
src/vec/: conflict_resolution_choice.rs  identified_vec.rs  is_identified_vec.rs  mod.rs
src/vec_of/: identifiable_trait.rs  identified_vec_of.rs  is_identified_vec_of.rs  is_identified_vec_of_via.rs  mod.rs  newtype_identified_vec_of.rs
src/via/: identified_vec_via.rs  is_identified_vec_of_via.rs  mod.rs  newtype_identified_vec_of.rs
tests/: Cargo.toml  tests.rs
