[package]
name = "identified_vec"
version = "0.1.2"
edition = "2021"
authors = ["Alexander Cyon <alex.cyon@gmail.com>"]
description = "Like HashSet but retaining INSERTION order and without `Hash` requirement on the Element type."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Sajjon/identified_vec"
keywords = [
    "identified-vec",
    "identifiable",
    "vec",
    "orderset",
    "set",
    "hashset",
]
categories = ["data-structures"]

[dependencies]
anyerror = "0.1.12"
serde = { version = "1.0.193", optional = true }
thiserror = "1.0.50"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
serde = "1.0.193"
serde_json = "1.0.108"
rand = "0.8.5"
maplit = "1.0.2"
