[package]
name = "identified_vec"
version = "0.1.3"
edition = "2021"
authors = ["Alexander Cyon <alex.cyon@gmail.com>"]
description = "Like HashSet but retaining INSERTION order and without `Hash` requirement on the Element type."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Sajjon/identified_vec"
keywords = ["identifiable", "vec", "orderset", "set", "hashset"]
categories = ["data-structures"]

[features]
serde = ["dep:serde"]
id_prim = []

[dependencies]
serde = { version = "1.0.193", optional = true }
thiserror = "1.0.50"

[dev-dependencies]
identified_vec = { path = ".", features = ["id_prim", "serde"] }
serde = "1.0.193"
serde_json = "1.0.108"
rand = "0.8.5"
maplit = "1.0.2"
