[package]
name = "identified_vec_macros"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Cyon <alex.cyon@gmail.com>"]

[dependencies]
identified_vec = { path = "../identified_vec" }
proc-macro2 = "1.0.70"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full", "parsing"] }

# [lib]
# proc-macro = true
